# ibkr-steuerrechner

./: LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
.streamlit/: config.toml
src/: Asset.py  app.py  deposit.py  depot_position.py  dividend.py  flex_query.py  foreign_currency_account.py  foreign_currency_bucket.py  forex.py  i18n.py  interest.py  iterable_text_io.py  money.py  option.py  options.py  other_fee.py  report.py  stock.py  transaction.py  transaction_collection.py  treasury_bill.py  unknown_line.py  utils.py
src/ibkr_steuerrechner/: deposit.py  dividend.py  flex_query.py  foreign_currency_bucket.py  forex.py  interest.py  money.py  options.py  other_fee.py  report.py  stock.py  treasury_bill.py  unknown_line.py
src/ibkr_steuerrechner/page/: utils.py
src/page/: utils.py
src/page/result/: bonds.py  deposits.py  dividends.py  foreign_currencies.py  forexes.py  interests.py  long_options.py  long_stocks.py  other_fees.py  short_options.py  short_stocks.py  stocks.py  summary.py  unknown_lines.py
src/page/start/: create_statement.py  introduction.py  report.py  tax_report_dates.py  upload_data.py
tests/: test_calc_options.py  test_calc_shares.py  test_deposit.py  test_depot_position.py  test_dividends.py  test_foreign_currency_account.py  test_foreign_currency_bucket.py  test_forex.py  test_interest.py  test_money.py  test_options.py  test_other_fee.py  test_stock.py  test_transaction_collection.py  test_treasury_bill.py  testutils.py
tests/resources/deposit/: deposit.csv  (+1 more)
(+39 files in other folders)
