[project]
name = "ibkr-steuerrechner"
version = "0.1.0"
description = "Zur Berechnung der Steuerschuld von Optionen- und Aktiengeschäften"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel~=2.18.0",
    "numpy~=2.3.5",
    "pandas~=2.3.3",
    "pandas-stubs~=2.3.3.251201",
    "python-dateutil~=2.9.0.post0",
    "streamlit~=1.56.0",
    "xlsxwriter~=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.uv]
required-version = ">=0.11.0"
